<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EAE7F5"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"
        app:srcCompat="@drawable/title_image" />

    <Button
        android:id="@+id/button_begin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="138dp"
        android:layout_marginEnd="67dp"
        android:layout_marginRight="67dp"
        android:text="@string/begin_game"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/radioGroup" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="107dp"
        android:layout_marginEnd="69dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="69dp"
        android:layout_marginStart="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_begin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <RadioButton
            android:id="@+id/radioButtonNewbie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioButtonClick"
            android:text="@string/level1" />

        <RadioButton
            android:id="@+id/radioButtonBeginner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioButtonClick"
            android:text="@string/level2" />

        <RadioButton
            android:id="@+id/radioButtonSeasoned"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioButtonClick"
            android:text="@string/level3" />

        <RadioButton
            android:id="@+id/radioButtonExperienced"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioButtonClick"
            android:text="@string/level4" />

        <RadioButton
            android:id="@+id/radioButtonExpert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="radioButtonClick"
            android:text="@string/level5" />
    </RadioGroup>

</android.support.constraint.ConstraintLayout>